--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
     </template>
 
     
-    <script src="js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
 </body>
 </html>
