--- a/index.html
+++ b/index.html
@@ -120,6 +120,6 @@
         <span>© Created by Jack (aka <strong>bkfan1</strong>) - 2021</span>
     </footer>
     
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="./js/index.js"></script>
 </body>
 </html>
